module.less: Fix quick-actions height for wrapped `li`s

--- a/public/css/module.less
+++ b/public/css/module.less
@@ -176,6 +176,14 @@
       padding-right: 0;
     }
   }
+
+  .quick-actions {
+    margin-bottom: 0;
+
+    li {
+      margin-bottom: .5em;
+    }
+  }
 }
 
 .content h2:first-child {
